--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,18 +28,23 @@
           </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" data-toggle="modal" data-target="#exampleModal">
-            <i class="fa fa-user-circle" style="font-size:16px"></i>  Sign in
+        <div data-toggle="modal" data-target="#signinModal">
+            <a class="nav-link" href="#">Sign in</a>
+        </div>
+      </form>
+      <form class="form-inline my-2 my-lg-0">
+        <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" data-toggle="modal" data-target="#signupModal">
+            <i class="fa fa-user-circle" style="font-size:16px"></i>  Sign Up
           </button>
       </form>
     </div>
   </nav>
 
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="signinModal" tabindex="-1" role="dialog" aria-labelledby="signinModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-                <h5 class="modal-title " id="exampleModalLabel">SIGN IN</h5>
+                <h5 class="modal-title " id="signinModalLabel">SIGN IN</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -47,13 +52,20 @@
           <div class="modal-body">
               <form>
                   <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    <div class="input-group mb-2">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text"><i class="fa fa-user-circle" style="font-size:16px"></i></div>
+                      </div>
+                      <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="E-mail">
+                    </div>
                   </div>
                   <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <div class="input-group mb-2">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text"><i class="fas fa-lock" style="font-size:16px"></i></div>
+                      </div>
+                      <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="Password">
+                    </div>
                   </div>
                   <div class="form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -68,6 +80,74 @@
       </div>
     </div>
 
+    <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+                <h5 class="modal-title " id="signupModalLabel">SIGN UP</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+              <form>
+                  <div class="form-group">
+                    <div class="input-group mb-2">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text"><i class="fa fa-user-circle" style="font-size:16px"></i></div>
+                      </div>
+                      <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="E-mail">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="input-group mb-2">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text"><i class="fas fa-lock" style="font-size:16px"></i></div>
+                      </div>
+                      <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="Password">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="input-group mb-2">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text"><i class="fas fa-lock" style="font-size:16px"></i></div>
+                      </div>
+                      <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="Re-Password">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="inputAddress">Information</label>
+                    <input type="text" class="form-control" id="Restaurantsname" placeholder="Restaurants name">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="inputAddress" placeholder="Address">
+                  </div>
+                  <div class="form-row">
+                    <div class="form-group col-md-4">
+                      <input type="text" class="form-control" id="inputCity" placeholder="City">
+                    </div>
+                    <div class="form-group col-md-4">
+                      <select id="inputState" class="form-control">
+                        <option selected>State...</option>
+                        <option>Ubon Ratchathani</option>
+                        <option>Bangkok</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-md-4">
+                      <input type="text" class="form-control" id="inputZip" placeholder="Zip">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="phoneNumber" placeholder="Phone number">
+                  </div>
+                  <div class="text-center">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                  </div>
+                </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <footer class="bg-dark text-white mt-4">
             <div class="d-flex flex-column justify-content-center">
