--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+        <img src="favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="">
+      </a>
     <a class="navbar-brand" href="#">Restaurants</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -11,6 +14,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Demo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Package</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -39,6 +45,25 @@
       </form>
     </div>
   </nav>
+
+  <div class="container">
+      <div class="row">
+          <div class="col text-center">Customer</div>
+        </div>
+    </div>
+    <img src="../img/home.jpeg" class="rounded mx-auto d-block">
+    <div class="container" style="background-color: rgb(233, 233, 233);width: 100%;">
+        <div class="row">
+            <div class="col text-center"><h5>Browser Support</h5></div>
+          </div>
+          <div class="row text-center">
+            <div class="col col-sm"></div>
+            <div class="col col-sm"><img src="favicon.ico" class="rounded mx-auto d-block"></div>
+            <div class="col col-sm"><img src="favicon.ico" class="rounded mx-auto d-block"></div>
+          </div>
+      </div>
+
+
 
   <div class="modal fade" id="signinModal" tabindex="-1" role="dialog" aria-labelledby="signinModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -149,12 +174,8 @@
       </div>
     </div>
 
-    <footer class="bg-dark text-white mt-4">
-            <div class="d-flex flex-column justify-content-center">
-                <div class="p-2"><h5>XXX</h5></div>
-                <div class="p-2">92 Su Kha Songkhro Road. Nai Mueang Sub - Distric Muang Ubon Ratchathani District Ubon Ratchathani, 34000, +66(0)45-955-350</div>
-                <div class="p-2">©2018 XXX company.</div>
-            </div>
-    </footer>
-
-    <div class="fixed-bottom">...</div>
+    <div class="fixed-bottom">
+        <div class="d-flex justify-content-center bd-highlight mb-3">
+            <div class="d-flex justify-content-center">©2018 up-link.tech company.</div>
+        </div>
+    </div>
