--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
     <a class="navbar-brand" href="#">
-        <img src="favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="/assets/img/restaurant.ico" width="48" height="48" class="d-inline-block align-top" alt="">
       </a>
     <a class="navbar-brand" href="#">Restaurants</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,23 +46,57 @@
     </div>
   </nav>
 
-  <div class="container">
-      <div class="row">
-          <div class="col text-center">Customer</div>
-        </div>
-    </div>
-    <img src="../img/home.jpeg" class="rounded mx-auto d-block">
-    <div class="container" style="background-color: rgb(233, 233, 233);width: 100%;">
-        <div class="row">
-            <div class="col text-center"><h5>Browser Support</h5></div>
-          </div>
-          <div class="row text-center">
-            <div class="col col-sm"></div>
-            <div class="col col-sm"><img src="favicon.ico" class="rounded mx-auto d-block"></div>
-            <div class="col col-sm"><img src="favicon.ico" class="rounded mx-auto d-block"></div>
-          </div>
-      </div>
 
+  <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col-sm-6">Hello word</div>
+        <div class="col-sm-6"><img src="/assets/img/home.jpeg" class="d-inline-block align-top" alt=""></div>
+        <div class="col-sm-6"><img src="favicon.ico" width="30" height="30" class="d-inline-block align-top" alt=""></div>
+      </div>
+  </div>
+
+
+  <div class="container-fluid">
+      <div class="row text-center" style="background-color:rgb(228, 228, 228);">
+        <div class="col-12 " ><h5>Customer</h5></div>
+        <div class="col-sm-6"><img src="/assets/img/home.jpeg" class="d-inline-block align-top" alt=""></div>
+        <div class="col-sm-6"><img src="favicon.ico" width="30" height="30" class="d-inline-block align-top" alt=""></div>
+      </div>
+  </div>
+
+  <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col-sm-6">Hello word</div>
+        <div class="col-sm-6"><img src="/assets/img/home.jpeg" class="d-inline-block align-top" alt=""></div>
+        <div class="col-sm-6"><img src="favicon.ico" width="30" height="30" class="d-inline-block align-top" alt=""></div>
+      </div>
+  </div>
+
+
+  <div class="container-fluid">
+      <div class="row text-center" style="background-color:rgb(228, 228, 228);">
+        <div class="col-12 " ><h5>Customer</h5></div>
+        <div class="col-sm-6"><img src="/assets/img/home.jpeg" class="d-inline-block align-top" alt=""></div>
+        <div class="col-sm-6"><img src="favicon.ico" width="30" height="30" class="d-inline-block align-top" alt=""></div>
+      </div>
+  </div>
+
+  <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col-sm-6">Hello word</div>
+        <div class="col-sm-6"><img src="/assets/img/home.jpeg" class="d-inline-block align-top" alt=""></div>
+        <div class="col-sm-6"><img src="favicon.ico" width="30" height="30" class="d-inline-block align-top" alt=""></div>
+      </div>
+  </div>
+
+
+  <div class="container-fluid">
+      <div class="row text-center" style="background-color:rgb(228, 228, 228);">
+        <div class="col-12 " ><h5>Customer</h5></div>
+        <div class="col-sm-6"><img src="/assets/img/home.jpeg" class="d-inline-block align-top" alt=""></div>
+        <div class="col-sm-6"><img src="favicon.ico" width="30" height="30" class="d-inline-block align-top" alt=""></div>
+      </div>
+  </div>
 
 
   <div class="modal fade" id="signinModal" tabindex="-1" role="dialog" aria-labelledby="signinModalLabel" aria-hidden="true">
@@ -174,7 +208,7 @@
       </div>
     </div>
 
-    <div class="fixed-bottom">
+    <div class="container-fluid">
         <div class="d-flex justify-content-center bd-highlight mb-3">
             <div class="d-flex justify-content-center">©2018 up-link.tech company.</div>
         </div>
