--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,60 +51,34 @@
   </div>
 </nav>
 
-
-<div class="card bg-dark text-white">
-  <img class="card-img" src="/assets/img/home.jpg" alt="Card image">
-  <div class="card-img-overlay">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
-      bit longer.</p>
-    <p class="card-text">Last updated 3 mins ago</p>
-  </div>
-</div>
-
-
-
-<div class="container-fluid">
-  <div class="row text-center">
-    <div class="col-sm-6">Hello word</div>
-    <div class="col-sm-6">
-      <img src="/assets/img/home.jpeg" class="d-inline-block align-top" alt="">
-    </div>
-    <div class="col-sm-6">
-      <img src="favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="">
-    </div>
-  </div>
-</div>
-
-
-<div class="container-fluid">
-  <div class="row text-center" style="background-color:rgb(228, 228, 228);">
-    <div class="col-12 ">
-      <h5>Customer</h5>
-    </div>
-    <div class="col-sm-6">
-      <img src="/assets/img/home.jpeg" class="d-inline-block align-top" alt="">
-    </div>
-    <div class="col-sm-6">
-      <img src="favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="">
+<!-- nav -->
+<header class="text-white text-center" style="background:url(/assets/img/wallpaper2you_362161.jpg);padding-top: 12rem;padding-bottom: 12rem;background-size:cover;">
+      
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-9 mx-auto">
+        <h1 class="mb-5">Build a landing page for your business or project and generate more leads!</h1>
+      </div>
+      <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+        <form>
+          <div class="form-row">
+            <div class="col-12 col-md-9 mb-2 mb-md-0">
+              <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+            </div>
+            <div class="col-12 col-md-3">
+              <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
-</div>
-
-<div class="container-fluid">
-  <div class="row text-center">
-    <div class="col-sm-6">Hello word</div>
-    <div class="col-sm-6">
-      <img src="/assets/img/home.jpeg" class="d-inline-block align-top" alt="">
-    </div>
-    <div class="col-sm-6">
-      <img src="favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="">
-    </div>
-  </div>
-</div>
+</header>
 
 
-<div class="container-fluid" style="background-color:rgb(247, 247, 247);">
+
+
+<div class="container-fluid" style="background-color:rgb(247, 247, 247);padding-top: 2rem;">
   <div class="col-12 col-sm-12 text-center"  >
     <h2>Package</h2>
   </div>
@@ -182,7 +156,7 @@
     </div>
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid" style="padding-top: 2rem;">
     <div class="col-12 col-sm-12 text-center" >
       <h2>Browser Support</h2>
     </div>
@@ -199,7 +173,7 @@
   </div>
 
 
-
+<section>
 <div class="modal fade" id="signinModal" tabindex="-1" role="dialog" aria-labelledby="signinModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -243,7 +217,10 @@
     </div>
   </div>
 </div>
+</section>
 
+
+<section>
 <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -318,9 +295,10 @@
     </div>
   </div>
 </div>
+</section>
 
 
-
+<section>
 <div class="modal fade" id="requestPrice" tabindex="-1" role="dialog" aria-labelledby="requestPrice" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -387,15 +365,13 @@
       </div>
     </div>
   </div>
+</section>
 
 
 
-  
+<section>
 <div class="container-fluid" style="background-color:rgb(37, 37, 37);color: white;">
-
-
   <div class="container">
-    
       <div class="row">
           <div class="col-sm-4">
               <div class="p-2 bd-highlight">
@@ -445,3 +421,4 @@
   </div>
 </div>
 </div>
+</section>
