--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,7 +57,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-9 mx-auto">
-        <h1 class="mb-5">Build a landing page for your business or project and generate more leads!</h1>
+        <h1 class="mb-5">Assistant for your Restaurants</h1>
       </div>
       <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
         <form>
@@ -77,20 +77,23 @@
 
 
 
-
+<section>
 <div class="container-fluid" style="background-color:rgb(247, 247, 247);padding-top: 2rem;">
-  <div class="col-12 col-sm-12 text-center"  >
+  <div class="col-12 col-sm-12 text-center">
     <h2>Package</h2>
   </div>
   <div class="d-flex justify-content-center ">  
     <div class="row" style="padding-left: 12%;padding-right: 12%;">
-          <div class="card col-sm" style="margin-right: 1%;margin-left: 1%;margin-top: 1%;margin-bottom: 1%">
-              <div class="card-body">
-                <h3 class="card-title text-center">S</h3>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <div class="card col-sm" style="margin-right: 1%;margin-left: 1%;margin-top: 1%;margin-bottom: 1%;">
+              <div class="card-body" style="padding-bottom: 2rem;">
+                <h3 class="card-title text-center" >S</h3>
+                <p class="card-text">Start for your Restaurant.Power by Dashboard</p>
               </div>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">Online</li>
+                <li class="list-group-item">Dashboard</li>
+                <li class="list-group-item">Not support Delivery</li>
+                <li class="list-group-item">Not support Membership</li>
                 <li class="list-group-item">1 Branch</li>
                 <li class="list-group-item">1 Admin</li>
                 <li class="list-group-item">1 Manager</li>
@@ -99,7 +102,9 @@
                 <li class="list-group-item">Update Version Free</li>
                 <li class="list-group-item">Support 24hr</li>
               </ul>
+              <a class="nav-link text-center" href="#">Compare</a>
               <div class="card-body text-center">
+                  
                   <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" data-toggle="modal"
                   data-target="#signupModal">
                   <i style="font-size:16px"></i>THB 1,000
@@ -107,13 +112,16 @@
               </div>
             </div>
 
-          <div class="card col-sm" style="margin-right: 1%;margin-left: 1%;margin-top: 1%;margin-bottom: 1%">
-              <div class="card-body">
+          <div class="card col-sm" style="margin-right: 1%;margin-left: 1%;margin-top: 1%;margin-bottom: 1%;">
+              <div class="card-body" style="padding-bottom: 2rem;">
                   <h3 class="card-title text-center">M</h3>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Increase Sales for your Restaurant.Support Membership</p>
               </div>
               <ul class="list-group list-group-flush">
                   <li class="list-group-item">Online</li>
+                  <li class="list-group-item">Dashboard</li>
+                  <li class="list-group-item">Support Membership</li>
+                  <li class="list-group-item">Not Support Delivery</li>
                   <li class="list-group-item">1 Branch</li>
                   <li class="list-group-item">2 Admin</li>
                   <li class="list-group-item">2 Manager</li>
@@ -122,6 +130,7 @@
                   <li class="list-group-item">Update Version Free</li>
                   <li class="list-group-item">Support 24hr</li>
                 </ul>
+                <a class="nav-link text-center" href="#">Compare</a>
               <div class="card-body text-center">
                   <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" data-toggle="modal"
                   data-target="#signupModal">
@@ -129,13 +138,16 @@
                 </button>
               </div>
             </div>
-            <div class="card col-sm" style="margin-right: 1%;margin-left: 1%;margin-top: 1%;margin-bottom: 1%">
-                <div class="card-body">
+            <div class="card col-sm" style="margin-right: 1%;margin-left: 1%;margin-top: 1%;margin-bottom: 1%;">
+                <div class="card-body" style="padding-bottom: 2rem;">
                     <h3 class="card-title text-center">L</h3>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">The best of Restaurant & Membership System</p>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Online</li>
+                    <li class="list-group-item">Dashboard</li>
+                    <li class="list-group-item">Support Membership</li>
+                    <li class="list-group-item">Support Delivery</li>
                     <li class="list-group-item">X Branch</li>
                     <li class="list-group-item">X Admin</li>
                     <li class="list-group-item">X Manager</li>
@@ -144,8 +156,8 @@
                     <li class="list-group-item">Update Version Free</li>
                     <li class="list-group-item">Support 24hr</li>
                   </ul>
+                  <a class="nav-link text-center" href="#">Compare</a>
                 <div class="card-body text-center">
-  
                     <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" data-toggle="modal"
                     data-target="#requestPrice">
                     <i style="font-size:16px"></i>Request Price
@@ -155,7 +167,9 @@
       </div>
     </div>
 </div>
+</section>
 
+<section>
 <div class="container-fluid" style="padding-top: 2rem;">
     <div class="col-12 col-sm-12 text-center" >
       <h2>Browser Support</h2>
@@ -171,6 +185,7 @@
           <p class="text-center">IE</p></div></div>
       </div>
   </div>
+</section>
 
 
 <section>
@@ -370,7 +385,7 @@
 
 
 <section>
-<div class="container-fluid" style="background-color:rgb(37, 37, 37);color: white;">
+<div class="container-fluid" style="background-color:rgb(37, 37, 37);color: white;padding-top: 1rem;">
   <div class="container">
       <div class="row">
           <div class="col-sm-4">
@@ -413,7 +428,8 @@
                           <div class="p-2">FAQ</div>
                         </div>
                   </div>
-                </div></div>
+                </div>
+              </div>
       </div>
 
   <div class=" d-flex align-items-end justify-content-center">
