--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,10 +16,10 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Demo</a>
+        <a class="nav-link" [routerLink]="['dashboard']">Demo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Package</a>
+        <a class="nav-link" [routerLink]="['package']">Package</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
@@ -39,7 +39,7 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <div data-toggle="modal" data-target="#signinModal">
-        <a class="nav-link" href="#">Sign in</a>
+        <a class="nav-link">Sign in</a>
       </div>
     </form>
     <form class="form-inline my-2 my-lg-0">
