--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['dashboard']">Demo</a>
+        <a class="nav-link" href="#">Demo</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['package']">Package</a>
@@ -66,7 +66,7 @@
               <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
             </div>
             <div class="col-12 col-md-3">
-              <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
+              <button type="submit" class="btn btn-block btn-lg btn-primary" [routerLink]="['dashboard']">Sign up!</button>
             </div>
           </div>
         </form>
@@ -241,7 +241,7 @@
               <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div>
             <div class="text-center">
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary" [routerLink]="['dashboard']">Submit</button>
             </div>
           </form>
         </div>
