--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,11 +10,30 @@
 
   <div class="collapse navbar-collapse flex-row-reverse" id="navbarSupportedContent">
     <form class="form-inline my-2 my-lg-0 ">
-      <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" data-toggle="modal"
-        data-target="#signupModal">
-        <i class="fa fa-user-circle" style="font-size:16px"></i> Sign out
+      <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" [routerLink]="['']">
+        <i class="fa fa-user-circle" style="font-size:16px" ></i> Sign out
       </button>
     </form>
   </div>
 </header>
+    <ul class="nav flex-column" style="padding-top: 5rem;width: 20%;">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" href="#">Link</a>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                <li class="nav-item">
+                    <a class="nav-link sub-link" href="#">Link</a>
+                </li>
+            </div>
+        </li>
 
+        
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
