--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,22 +18,65 @@
 </header>
     <ul class="nav flex-column" style="padding-top: 5rem;width: 20%;">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
+            <a class="nav-link" [routerLink]="['../dashboard']" href="#">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" [routerLink]="['../report']" href="#">ออกรายงาน</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" href="#">Link</a>
-            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+            <a class="nav-link collapsed" data-toggle="collapse" data-target="#sale" aria-expanded="false" aria-controls="collapseTwo" href="#">ระบบการขาย</a>
+            <div id="sale" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <li class="nav-item">
-                    <a class="nav-link sub-link" href="#">Link</a>
+                    <a class="nav-link sub-link" href="#">จัดการบิล</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link sub-link" href="#">จัดการโต๊ะ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link sub-link" href="#">เมนูอาหาร</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link sub-link" href="#">ระบบหน้าร้าน</a>
                 </li>
             </div>
         </li>
-
-        
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link collapsed" data-toggle="collapse" data-target="#stock" aria-expanded="false" aria-controls="collapseTwo" href="#">ระบบคลังสินค้า</a>
+            <div id="stock" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                <li class="nav-item">
+                    <a class="nav-link sub-link" href="#">ซัพพลายเออร์</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link sub-link" href="#">รายการสินค้า</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link sub-link" href="#">รายการสั่งสินค้า</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link sub-link" href="#">นำเข้าสินค้า</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link sub-link" href="#">นำออกสินค้า</a>
+                </li>
+            </div>
         </li>
-      </ul>
+        <li class="nav-item">
+                <a class="nav-link collapsed" data-toggle="collapse" data-target="#salary" aria-expanded="false" aria-controls="collapseTwo" href="#">ระบบพนักงาน</a>
+                <div id="salary" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                    <li class="nav-item">
+                        <a class="nav-link sub-link" href="#">รายชื่อพนักงาน</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link sub-link" href="#">เวลาทำงาน</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link sub-link" href="#">คิดค่าตอบแทน</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link sub-link" href="#">หักเงิน / เพิ่มเงิน</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link sub-link" href="#">กฎการเข้างาน</a>
+                    </li>
+                </div>
+            </li>
