--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-.body {
+body {
     font-family: 'Kanit', sans-serif;
+    color: rgb(15, 15, 15);
 }
