--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,72 +11,72 @@
   <div class="collapse navbar-collapse flex-row-reverse" id="navbarSupportedContent">
     <form class="form-inline my-2 my-lg-0 ">
       <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" [routerLink]="['']">
-        <i class="fa fa-user-circle" style="font-size:16px" ></i> Sign out
+        <i class="fa fa-user-circle"></i> Sign out
       </button>
     </form>
   </div>
 </header>
     <ul class="nav flex-column" style="padding-top: 5rem;width: 20%;">
         <li class="nav-item">
-            <a class="nav-link" [routerLink]="['../dashboard']" href="#">Dashboard</a>
+            <a class="nav-link" [routerLink]="['../dashboard']" href="#"><i class="fa fa-user-circle"></i>Dashboard</a>
         </li>
         <li class="nav-item">
-                <a class="nav-link" [routerLink]="['../report']" href="#">ออกรายงาน</a>
+                <a class="nav-link" [routerLink]="['../report']" href="#"><i class="fa fa fa-book"></i>ออกรายงาน</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link collapsed" data-toggle="collapse" data-target="#sale" aria-expanded="false" aria-controls="collapseTwo" href="#">ระบบการขาย</a>
+            <a class="nav-link collapsed" data-toggle="collapse" data-target="#sale" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-money" aria-hidden="true"></i>ระบบการขาย</a>
             <div id="sale" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <li class="nav-item">
-                    <a class="nav-link sub-link" href="#">จัดการบิล</a>
+                    <a class="nav-link sub-link" href="#"><i class="fa fa-money"></i>จัดการบิล</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" href="#">จัดการโต๊ะ</a>
+                    <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>จัดการโต๊ะ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" href="#">เมนูอาหาร</a>
+                    <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>เมนูอาหาร</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" href="#">ระบบหน้าร้าน</a>
+                    <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>ระบบหน้าร้าน</a>
                 </li>
             </div>
         </li>
         <li class="nav-item">
-            <a class="nav-link collapsed" data-toggle="collapse" data-target="#stock" aria-expanded="false" aria-controls="collapseTwo" href="#">ระบบคลังสินค้า</a>
+            <a class="nav-link collapsed" data-toggle="collapse" data-target="#stock" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-user-circle"></i>ระบบคลังสินค้า</a>
             <div id="stock" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <li class="nav-item">
-                    <a class="nav-link sub-link" href="#">ซัพพลายเออร์</a>
+                    <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>ซัพพลายเออร์</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" href="#">รายการสินค้า</a>
+                    <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>รายการสินค้า</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" href="#">รายการสั่งสินค้า</a>
+                    <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>รายการสั่งสินค้า</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" href="#">นำเข้าสินค้า</a>
+                    <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>นำเข้าสินค้า</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" href="#">นำออกสินค้า</a>
+                    <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>นำออกสินค้า</a>
                 </li>
             </div>
         </li>
         <li class="nav-item">
-                <a class="nav-link collapsed" data-toggle="collapse" data-target="#salary" aria-expanded="false" aria-controls="collapseTwo" href="#">ระบบพนักงาน</a>
+                <a class="nav-link collapsed" data-toggle="collapse" data-target="#salary" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-user-circle"></i>ระบบพนักงาน</a>
                 <div id="salary" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                     <li class="nav-item">
-                        <a class="nav-link sub-link" href="#">รายชื่อพนักงาน</a>
+                        <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>รายชื่อพนักงาน</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link sub-link" href="#">เวลาทำงาน</a>
+                        <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>เวลาทำงาน</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link sub-link" href="#">คิดค่าตอบแทน</a>
+                        <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>คิดค่าตอบแทน</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link sub-link" href="#">หักเงิน / เพิ่มเงิน</a>
+                        <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>หักเงิน / เพิ่มเงิน</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link sub-link" href="#">กฎการเข้างาน</a>
+                        <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>กฎการเข้างาน</a>
                     </li>
                 </div>
             </li>
