--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
             <a class="nav-link" [routerLink]="['../dashboard']" href="#"><i class="fa fa-user-circle"></i>Dashboard</a>
         </li>
         <li class="nav-item">
-                <a class="nav-link" [routerLink]="['../report']" href="#"><i class="fa fa fa-book"></i>ออกรายงาน</a>
+                <a class="nav-link" [routerLink]="['../report']" href="#"><i class="fa fa-sellsy"></i>ออกรายงาน</a>
         </li>
         <li class="nav-item">
             <a class="nav-link collapsed" data-toggle="collapse" data-target="#sale" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-money" aria-hidden="true"></i>ระบบการขาย</a>
@@ -41,7 +41,7 @@
             </div>
         </li>
         <li class="nav-item">
-            <a class="nav-link collapsed" data-toggle="collapse" data-target="#stock" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-user-circle"></i>ระบบคลังสินค้า</a>
+            <a class="nav-link collapsed" data-toggle="collapse" data-target="#stock" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-dropbox"></i>ระบบคลังสินค้า</a>
             <div id="stock" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <li class="nav-item">
                     <a class="nav-link sub-link" href="#"><i class="fa fa-user-circle"></i>ซัพพลายเออร์</a>
