--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -18,6 +18,6 @@ i {
     padding-right: 0.5rem;
 }
 
-.nav .box {
-    box-shadow: 5px 5px 15px 5px rgba(119, 119, 119, 0.5);
+.box {
+    box-shadow: 5px 5px 15px 5px rgba(216, 216, 216, 0.5);
 }
