--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+<header class="navbar navbar-expand-lg fixed-top navbar-light bg-light box">
   <a class="navbar-brand" href="#">
     <img src="/assets/img/restaurant.ico" width="48" height="48" class="d-inline-block align-top" alt="">
   </a>
@@ -16,7 +16,7 @@
     </form>
   </div>
 </header>
-    <ul class="nav flex-column box" style="padding-top: 5rem;width: 20%;height:50rem;">
+    <ul class="nav flex-column box " style="padding-top: 5rem;width: 20%;height:40rem;">
         <li class="nav-item">
             <a class="nav-link" [routerLink]="['../dashboard']" href="#"><i class="fa fa-dashboard"></i>Dashboard</a>
         </li>
