--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
         <a class="nav-link" href="#">Demo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['package']">Package</a>
+        <a class="nav-link" [routerLink]="['dashboard']">Package</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
