--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,36 +1,1 @@
-<header class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <img src="/assets/img/restaurant.ico" width="48" height="48" class="d-inline-block align-top" alt="">
-  </a>
-  <a class="navbar-brand" href="#">Restaurants</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse flex-row-reverse" id="navbarSupportedContent">
-    <form class="form-inline my-2 my-lg-0 ">
-      <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" data-toggle="modal"
-        data-target="#signupModal">
-        <i class="fa fa-user-circle" style="font-size:16px"></i> Sign out
-      </button>
-    </form>
-  </div>
-</header>
-
-
-<div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
-  <div class="row" style="padding-top: 5rem;width: 50%;">
-    <div class="col-3">
-      <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-        <a class="nav-link" [routerLink]="['../dashboard']" id="v-pills-home-tab" >Dashboard</a>
-        <a class="nav-link active" [routerLink]="['../report']">Report</a>
-      </div>
-    </div>
-    <div class="col-9">
-      <div class="tab-content" id="v-pills-tabContent">
-        <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">Report</div>
-      </div>
-    </div>
-  </div>
-</div>
+<app-menu></app-menu>
