--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,25 +19,25 @@
 <div style="height: 1280px;">
     <ul class="nav flex-column box" style="padding-top: 5rem;width: 20%;height: 100%;">
         <li class="nav-item">
-            <a class="nav-link active" [routerLink]="['../dashboard']" ><i class="fa fa-dashboard"></i>Dashboard</a>
+            <a class="nav-link" [routerLink]="['../dashboard']" [routerLinkActive]="['fixbg']"><i class="fa fa-dashboard"></i>Dashboard</a>
         </li>
         <li class="nav-item">
-                <a class="nav-link" [routerLink]="['../report']" href="#"><i class="fa fa-sellsy"></i>ออกรายงาน</a>
+                <a class="nav-link" [routerLink]="['../report']" [routerLinkActive]="['fixbg']"><i class="fa fa-sellsy"></i>ออกรายงาน</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link collapsed" data-toggle="collapse" data-target="#sale" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-money" aria-hidden="true"></i>ระบบการขาย</a>
+            <a class="nav-link collapsed active" data-toggle="collapse" data-target="#sale" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-money" aria-hidden="true"></i>ระบบการขาย</a>
             <div id="sale" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <li class="nav-item">
-                    <a class="nav-link sub-link" [routerLink]="['../sale/bill']" ><i class="fa fa-file-text-o"></i>จัดการบิล</a>
+                    <a class="nav-link sub-link" [routerLink]="['../bill']" [routerLinkActive]="['fixbg']"><i class="fa fa-file-text-o"></i>จัดการบิล</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" [routerLink]="['../sale/table']"><i class="fa fa-th-large"></i>จัดการโต๊ะ</a>
+                    <a class="nav-link sub-link" [routerLink]="['../table']" [routerLinkActive]="['fixbg']"><i class="fa fa-th-large"></i>จัดการโต๊ะ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" [routerLink]="['../sale/list-menu']"><i class="	fa fa-cutlery"></i>เมนูอาหาร</a>
+                    <a class="nav-link sub-link" [routerLink]="['../list-menu']" [routerLinkActive]="['fixbg']"><i class="fa fa-cutlery"></i>เมนูอาหาร</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" [routerLink]="['../sale/pos']"><i class="fa fa-calculator"></i>ระบบหน้าร้าน</a>
+                    <a class="nav-link sub-link" [routerLink]="['../pos']" [routerLinkActive]="['fixbg']"><i class="fa fa-calculator"></i>ระบบหน้าร้าน</a>
                 </li>
             </div>
         </li>
@@ -45,19 +45,19 @@
             <a class="nav-link collapsed" data-toggle="collapse" data-target="#stock" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-dropbox"></i>ระบบคลังสินค้า</a>
             <div id="stock" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <li class="nav-item">
-                    <a class="nav-link sub-link" [routerLink]="['../stock/supplier']"><i class="fa fa-truck"></i>ซัพพลายเออร์</a>
+                    <a class="nav-link sub-link" [routerLink]="['../supplier']" [routerLinkActive]="['fixbg']"><i class="fa fa-truck"></i>ซัพพลายเออร์</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" [routerLink]="['../stock/product']"><i class="fa fa-clipboard"></i>รายการสินค้า</a>
+                    <a class="nav-link sub-link" [routerLink]="['../product']" [routerLinkActive]="['fixbg']"><i class="fa fa-clipboard"></i>รายการสินค้า</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" [routerLink]="['../stock/order']"><i class="fa fa-exchange"></i>รายการสั่งสินค้า</a>
+                    <a class="nav-link sub-link" [routerLink]="['../order']" [routerLinkActive]="['fixbg']"><i class="fa fa-exchange"></i>รายการสั่งสินค้า</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" [routerLink]="['../stock/import-product']"><i class="fa fa-cloud-download"></i>นำเข้าสินค้า</a>
+                    <a class="nav-link sub-link" [routerLink]="['../import-product']" [routerLinkActive]="['fixbg']"><i class="fa fa-cloud-download"></i>นำเข้าสินค้า</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sub-link" [routerLink]="['../stock/export-product']"><i class="fa fa-cloud-upload"></i>นำออกสินค้า</a>
+                    <a class="nav-link sub-link" [routerLink]="['../export-product']" [routerLinkActive]="['fixbg']"><i class="fa fa-cloud-upload"></i>นำออกสินค้า</a>
                 </li>
             </div>
         </li>
@@ -65,19 +65,19 @@
                 <a class="nav-link collapsed" data-toggle="collapse" data-target="#salary" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-briefcase"></i>ระบบเงินเดือน ค่าตอบแทน</a>
                 <div id="salary" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                     <li class="nav-item">
-                        <a class="nav-link sub-link" [routerLink]="['../salary/emproyee']"><i class="fa fa-drivers-license-o"></i>รายชื่อพนักงาน</a>
+                        <a class="nav-link sub-link" [routerLink]="['../emproyee']" [routerLinkActive]="['fixbg']"><i class="fa fa-drivers-license-o"></i>รายชื่อพนักงาน</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link sub-link" [routerLink]="['../salary/check-time']"><i class="fa fa-calendar-check-o"></i>เวลาทำงาน</a>
+                        <a class="nav-link sub-link" [routerLink]="['../check-time']" [routerLinkActive]="['fixbg']"><i class="fa fa-calendar-check-o"></i>เวลาทำงาน</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link sub-link" [routerLink]="['../salary/calculate-salary']"><i class="fa fa-money"></i>คิดค่าตอบแทน</a>
+                        <a class="nav-link sub-link" [routerLink]="['../calculate-salary']" [routerLinkActive]="['fixbg']"><i class="fa fa-money"></i>คิดค่าตอบแทน</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link sub-link" [routerLink]="['../salary/del-add-money']"><i class="fa fa-refresh"></i>หักเงิน / เพิ่มเงิน</a>
+                        <a class="nav-link sub-link" [routerLink]="['../del-add-money']" [routerLinkActive]="['fixbg']"><i class="fa fa-refresh"></i>หักเงิน / เพิ่มเงิน</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link sub-link" [routerLink]="['../salary/set-time']"><i class="fa fa-sliders"></i>กฎการเข้างาน</a>
+                        <a class="nav-link sub-link" [routerLink]="['../set-time']" [routerLinkActive]="['fixbg']"><i class="fa fa-sliders"></i>กฎการเข้างาน</a>
                     </li>
                 </div>
             </li>
@@ -88,13 +88,13 @@
                 <a class="nav-link collapsed" data-toggle="collapse" data-target="#setting" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-cogs"></i>ตั้งค่าระบบ</a>
                 <div id="setting" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                     <li class="nav-item">
-                        <a class="nav-link sub-link" [routerLink]="['../backend/user']"><i class="fa fa-group"></i>ผู้ใช้งานระบบ</a>
+                        <a class="nav-link sub-link" [routerLink]="['../user']" [routerLinkActive]="['fixbg']"><i class="fa fa-group"></i>ผู้ใช้งานระบบ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link sub-link" [routerLink]="['../backend/profile']"><i class="fa fa-database"></i>ข้อมูลโปรแกรม</a>
+                        <a class="nav-link sub-link" [routerLink]="['../profile']" [routerLinkActive]="['fixbg']"><i class="fa fa-database"></i>ข้อมูลโปรแกรม</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link sub-link" [routerLink]="['../backend/backup']"><i class="fa fa-address-book-o"></i>ข้อมูลส่วนตัว</a>
+                        <a class="nav-link sub-link" [routerLink]="['../backup']" [routerLinkActive]="['fixbg']"><i class="fa fa-address-book-o"></i>ข้อมูลส่วนตัว</a>
                     </li>
                 </div>
             </li>
