--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -24,8 +24,8 @@
         <li class="nav-item">
                 <a class="nav-link" [routerLink]="['../report']" [routerLinkActive]="['fixbg']"><i class="fa fa-sellsy"></i>ออกรายงาน</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link collapsed active" data-toggle="collapse" data-target="#sale" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-money" aria-hidden="true"></i>ระบบการขาย</a>
+        <li class="nav-item ">
+            <a class="nav-link collapsed"  data-toggle="collapse" data-target="#sale" aria-expanded="false" aria-controls="collapseTwo" href="#"><i class="fa fa-money" aria-hidden="true"></i>ระบบการขาย</a>
             <div id="sale" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <li class="nav-item">
                     <a class="nav-link sub-link" [routerLink]="['../bill']" [routerLinkActive]="['fixbg']"><i class="fa fa-file-text-o"></i>จัดการบิล</a>
