--- a/src/app/sale/bill/bill.component.html
+++ b/src/app/sale/bill/bill.component.html
@@ -1,4 +1,4 @@
 <app-menu></app-menu>
-<p style="padding-top: 50rem;padding-left: 50rem;">
-  bill works!
-</p>
+<div class="areaall">
+  <p>จัดการบิล</p>
+</div>
