--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,23 +1,6 @@
-<header class="navbar navbar-expand-lg fixed-top navbar-light bg-light box">
-  <a class="navbar-brand" href="#">
-    <img src="/assets/img/restaurant.ico" width="48" height="48" class="d-inline-block align-top" alt="">
-  </a>
-  <a class="navbar-brand" href="#">Restaurants</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse flex-row-reverse" id="navbarSupportedContent">
-    <form class="form-inline my-2 my-lg-0 ">
-      <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" [routerLink]="['']">
-        <i class="fa fa-user-circle"></i> Sign out
-      </button>
-    </form>
-  </div>
-</header>
-<div style="height: 1280px;">
-    <ul class="nav flex-column box" style="padding-top: 5rem;width: 20%;height: 100%;">
+<div>
+<div>
+    <ul class="nav flex-column box fixed-top" style="padding-top: 5rem;width: 20%;height: 100%;">
         <li class="nav-item">
             <a class="nav-link" [routerLink]="['../dashboard']" [routerLinkActive]="['fixbg']"><i class="fa fa-dashboard"></i>Dashboard</a>
         </li>
@@ -91,12 +74,30 @@
                         <a class="nav-link sub-link" [routerLink]="['../user']" [routerLinkActive]="['fixbg']"><i class="fa fa-group"></i>ผู้ใช้งานระบบ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link sub-link" [routerLink]="['../profile']" [routerLinkActive]="['fixbg']"><i class="fa fa-database"></i>ข้อมูลโปรแกรม</a>
+                        <a class="nav-link sub-link" [routerLink]="['../profile']" [routerLinkActive]="['fixbg']"><i class="fa fa-database"></i>ข้อมูลส่วนตัว</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link sub-link" [routerLink]="['../backup']" [routerLinkActive]="['fixbg']"><i class="fa fa-address-book-o"></i>ข้อมูลส่วนตัว</a>
+                        <a class="nav-link sub-link" [routerLink]="['../backup']" [routerLinkActive]="['fixbg']"><i class="fa fa-address-book-o"></i>ข้อมูลโปรแกรม</a>
                     </li>
                 </div>
             </li>
     </ul>
+    <header class="navbar navbar-expand-lg fixed-top navbar-light bg-light box">
+        <a class="navbar-brand" href="#">
+          <img src="/assets/img/restaurant.ico" width="48" height="48" class="d-inline-block align-top" alt="">
+        </a>
+        <a class="navbar-brand" href="#">Restaurants</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse flex-row-reverse" id="navbarSupportedContent">
+          <form class="form-inline my-2 my-lg-0 ">
+            <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" [routerLink]="['']">
+              <i class="fa fa-user-circle"></i> Sign out
+            </button>
+          </form>
+        </div>
+      </header>
   </div>
