--- a/src/app/stock/supplier/supplier.component.html
+++ b/src/app/stock/supplier/supplier.component.html
@@ -1,5 +1,125 @@
 <app-menu></app-menu>
-<div class="areaall">
-  <p>ผู้ผลิต</p>
+
+<div class="content-container">
+    <div class="d-flex justify-content-between" style="padding-bottom: 1rem;">
+        <div>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addsupplier">
+              <i class="fa fa-plus-circle" aria-hidden="true"></i> เพิ่มซัพพลายเออร์</button>
+          </div>
+          <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+    </div>
+
+  <div class="card">
+    <div class="card-header bold2">
+      Supplier
+    </div>
+    <table class="table table-bordered xxx">
+      <thead>
+        <tr class="text-center">
+          <th scope="col">#</th>
+          <th scope="col">ชื่อบริษัท</th>
+          <th scope="col">หมายเลขโทรศัพท์</th>
+          <th scope="col">ที่อยู่</th>
+          <th scope="col">การกระทำ</th>
+
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+          <td>@mdo</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="d-flex justify-content-end">
+      <nav aria-label="Page navigation example" style="padding-right: 1rem;">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link" href="#">Previous</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">1</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">2</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">3</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+
+  </div>
 </div>
 
+<div class="modal fade" id="addsupplier" tabindex="-1" role="dialog" aria-labelledby="addsupplier" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addsupplier">เพิ่มซัพพลายเออร์</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="namecomp">ชื่อบริษัท</label>
+            <input type="text" class="form-control" id="namecomp" placeholder="บริษัท">
+          </div>
+          <div class="form-row">
+
+            <div class="form-group col-md-6">
+              <label for="phonenum">หมายเลขโทรศัพท์</label>
+              <input type="text" class="form-control" id="phonenum" placeholder="หมายเลขโทรศัพท์">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="emailcomp">อีเมล</label>
+              <input type="email" class="form-control" id="emailcomp" placeholder="อีเมล">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="inputAddress2">ที่อยู่</label>
+            <input type="text" class="form-control" id="addresscomp" placeholder="เลขที่">
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <label for="city">อำเภอ</label>
+              <input type="text" class="form-control" id="city" placeholder="อำเภอ">
+            </div>
+            <div class="form-group col-md-4">
+              <label for="state">จังหวัด</label>
+              <select id="state" class="form-control">
+                <option selected>กรุงเทพมหานคร</option>
+                <option select>ร้อยเอ็ด</option>
+                <option select>อุบลราชธานี</option>
+              </select>
+            </div>
+            <div class="form-group col-md-4">
+              <label for="zipcode">รหัสไปรษณีย์</label>
+              <input type="text" class="form-control" id="zipcode"  placeholder="รหัสไปรษณีย์">
+            </div>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">ยกเลิก</button>
+          <button type="button" class="btn btn-primary">บันทึก</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
